--- a/Main.html
+++ b/Main.html
@@ -16,8 +16,8 @@
     <tr>
         <th class="Menu"><a style="text-decoration: none" href="Lab1/Lab1.html">Lab1</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab2/Lab2.html">Lab2</a></th>
-        <th class="Menu"><a style="text-decoration: none" href="Lab3.html">Lab3</a></th>
-        <th class="Menu"><a style="text-decoration: none" href="Lab4.html">Lab4</a></th>
+        <th class="Menu"><a style="text-decoration: none" href="Lab3/Lab3.html">Lab3</a></th>
+        <th class="Menu"><a style="text-decoration: none" href="Lab4/Lab4.html">Lab4</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab5.html">Lab5</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab6.html">Lab6</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab7.html">Lab7</a></th>
