--- a/Lab4/Obrobnyk.html
+++ b/Lab4/Obrobnyk.html
@@ -58,6 +58,7 @@
             <div>
                 <h2>Код:</h2>
                 <img src="https://i.imgur.com/kSTumEL.png">
+                <img src="https://i.imgur.com/KeNxUeo.png">
                 <h2>Результат:</h2>
                 <img src="https://i.imgur.com/edNrHzt.png">
             </div>
