Fixed screenshots in lab5

--- a/Lab5/Informers.html
+++ b/Lab5/Informers.html
@@ -33,7 +33,7 @@
             </dl>
             <dl class="Buttons">
                 <div>
-                    <dt><a href="Informers.html"></a></dt>
+                    <dt><a href="Punkt3.html">3 Пункт</a></dt>
                 </div>
             </dl>
             <dl class="Buttons">
@@ -67,9 +67,9 @@
         <td>
             <div>
                 <h2>Код:</h2>
-                <img src="https://i.imgur.com/NBjhnv9.png" width="70%">
+                <img src="https://i.imgur.com/C8L0e4b.png" width="70%">
                 <h2>Результат:</h2>
-                <img src="https://i.imgur.com/DjCXTo2.png">
+                <img src="https://i.imgur.com/MAhptjT.png">
             </div>
         </td>
     </tr>
