--- a/Lab5/Lab5.html
+++ b/Lab5/Lab5.html
@@ -33,12 +33,12 @@
             </dl>
             <dl class="Buttons">
                 <div>
-                    <dt><a href="Informers.html"></a></dt>
+                    <dt><a href="Punkt3.html">3 Пункт</a></dt>
                 </div>
             </dl>
             <dl class="Buttons">
                 <div>
-                    <a>Галерея Unite Gallery</a>
+                    <dt>Галерея Unite Gallery</dt>
                     <div>
                         <a href="Photogallery.html">Фотогалерея</a>
                         <a href="Slider.html">Слайдер фотографій</a>
