--- a/Lab5/OpisPredm1.html
+++ b/Lab5/OpisPredm1.html
@@ -33,7 +33,7 @@
             </dl>
             <dl class="Buttons">
                 <div>
-                    <dt><a href="Informers.html"></a></dt>
+                    <dt><a href="Punkt3.html">3 Пункт</a></dt>
                 </div>
             </dl>
             <dl class="Buttons">
