--- a/Lab5/Punkt3.html
+++ b/Lab5/Punkt3.html
@@ -33,7 +33,7 @@
             </dl>
             <dl class="Buttons">
                 <div>
-                    <dt><a href="Informers.html"></a></dt>
+                    <dt><a href="Punkt3.html">3 Пункт</a></dt>
                 </div>
             </dl>
             <dl class="Buttons">
@@ -62,23 +62,14 @@
 
         <td>
             <div>
-                <p></p>
-                <p>Забезпечити виконання завдання згідно із варіантом (Таблиця №2), сформувати необхідні дані, вбудовані
-                    у програму, у вигляді масивів, виконати тестування програми.
-                </p>
-
-
-                <p> Яковенко Артем </p>
-                <img src="https://i.imgur.com/cDyOp3t.jpg">
-                <img src="https://i.imgur.com/BLMNO1g.jpg">
-
-                <p> Телегін Данило </p>
-                <img src="https://i.imgur.com/XxOLBgZ.png">
-                <img src="https://i.imgur.com/sVq0exM.jpg">
-
-                <p> Аюпов Тимур </p>
-                <img src="https://i.imgur.com/4CVc1AX.jpg">
-                <img src="https://i.imgur.com/Y1SzYs2.jpg">
+                <h2>Код:</h2>
+                <img src="https://i.imgur.com/NBjhnv9.png" width="70%">
+                <h2>Результат:</h2>
+                <img src="https://i.imgur.com/DjCXTo2.png">
+                <h2>Код:</h2>
+                <img src="https://i.imgur.com/DRTALBC.png" width="60%">
+                <h2>Результат:</h2>
+                <img src="https://i.imgur.com/0XVxMY7.png" width="60%">
             </div>
         </td>
     </tr>
