--- a/Lab5/Slider.html
+++ b/Lab5/Slider.html
@@ -33,7 +33,7 @@
             </dl>
             <dl class="Buttons">
                 <div>
-                    <dt><a href="Informers.html"></a></dt>
+                    <dt><a href="Punkt3.html"></a>3 Пункт</dt>
                 </div>
             </dl>
             <dl class="Buttons">
