--- a/Lab7/Search.html
+++ b/Lab7/Search.html
@@ -54,10 +54,10 @@
 
         <td>
             <div>
-                <h2>Яковенко А.:</h2>
-                <img src="https://i.imgur.com/qOuKVrs.png" width="60%">
                 <h2>Аюпов Т.</h2>
                 <img src="https://i.imgur.com/3papCD7.png">
+                <h2>Яковенко А.:</h2>
+                <img src="https://i.imgur.com/RPS321W.png" width="60%">
                 <h2>Телегін Д.</h2>
                 <img src="https://i.imgur.com/i5dFLZm.png">
             </div>
