--- a/Lab9/2punkt.html
+++ b/Lab9/2punkt.html
@@ -50,14 +50,16 @@
 
         <td>
             <div>
-                <h2>Мета: придбати практичні навички роботи основ асинхронного обміну даними мовою JavaScript за допомогою технології Ajax та бібліотеки Jquery, формування Ajax-запиту засобами jQuery при реалізації практичних задач Web-програмування
-                </h2>
-                <h3>Тема: АСИНХРОННА ВЗАЄМОДІЯ КЛІЄНТСЬКОЇ І СЕРВЕРНОЇ ЧАСТИН WEB- ЗАСТОСУВАНЬ З ВИКОРИСТАННЯМ ТЕХНОЛОГІЇ AJAX. ФОРМУВАННЯ AJAX-ЗАПИТУ ЗАСОБАМИ JQUERY.
-
-                </h3>
-                <h4>Додати ajax для сайту</h4>
-                <a href="https://github.com/Brigada8/Zvit-WEB-IA-01">Перейти до гітхаб</a>
-            </div>
+                <h2>Яковенко А.А</h2>
+                <img src="https://i.imgur.com/J1PxZHF.png" width="60%">
+                <img src="https://i.imgur.com/Zjvuqn4.png" width="60%">
+                <h2>Аюпов Т.Ш</h2>
+                <img src="https://i.imgur.com/3a3ee73.png" width="60%">
+                <img src="https://i.imgur.com/uC6etp0.png" width="60%">
+                <h2>Телегін Д.В</h2>
+                <img src="https://i.imgur.com/1nVzaW8.png" width="60%">
+                <img src="https://i.imgur.com/WaXLJfp.png" width="60%">
+             </div>
         </td>
     </tr>
 </table>
