--- a/Lab9/Lab9.html
+++ b/Lab9/Lab9.html
@@ -21,7 +21,7 @@
         <th class="Menu"><a style="text-decoration: none" href="../Lab5/Lab5.html">Lab5</a></th>
         <th class="Menu"><a style="text-decoration: none" href="../Lab6/Lab6.html">Lab6</a></th>
         <th class="Menu"><a style="text-decoration: none" href="../Lab7/Lab7.html">Lab7</a></th>
-        <th class="Menu"><a style="text-decoration: none" href="Lab8.html">Lab8</a></th>
+        <th class="Menu"><a style="text-decoration: none" href="../Lab8/Lab8.html">Lab8</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab9.html">Lab9</a></th>
     </tr>
 </table>
@@ -29,25 +29,18 @@
     <tr>
         <td>
             <dl class="Buttons">
-                <dt><a href="OpisPredm1.html">Постановка задачі Л/р №8</a></dt>
+                <dt><a href="OpisPredm1.html">Постановка задачі Л/р №9</a></dt>
             </dl>
             <dl class="Buttons">
-                <dt><a href="Opys.html">Опис об'єктів предметної галузі</a></dt>
+                <dt><a href="2punkt.html">Виконання 2 пункту</a></dt>
             </dl>
             <dl class="Buttons">
-                <dt><a href="Infologic.html">Інфологічна модель</a></dt>
+                <dt><a href="WebSite.html">Ajax у власному сайті</a></dt>
+            <dl class="Buttons">
+                <dt><a href="Func.html">Список функціоналу програми</a></dt>
             </dl>
             <dl class="Buttons">
-                <dt><a href="Datalogic.html">Даталогічна модель</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="phpmyadmin.html">Реалізація БД в СУБД phpMyadmin.</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="Search.html">Вивід даних БД</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="auto.html">Авторизація. Сесія</a></dt>
+                <dt><a href="Compare.html">Порівняння функціоналу</a></dt>
             </dl>
             <dl class="Buttons">
                 <dt><a href="VysLab2.html">ВИСНОВОК</a></dt>
