--- a/Lab9/WebSite.html
+++ b/Lab9/WebSite.html
@@ -17,11 +17,11 @@
         <th class="Menu"><a style="text-decoration: none" href="../Lab1/Lab1.html">Lab1</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab3.html">Lab2</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab3.html">Lab3</a></th>
-        <th class="Menu"><a style="text-decoration: none" href="Lab8.html">Lab4</a></th>
+        <th class="Menu"><a style="text-decoration: none" href="Lab9.html">Lab4</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab5.html">Lab5</a></th>
-        <th class="Menu"><a style="text-decoration: none" href="Lab8.html">Lab6</a></th>
-        <th class="Menu"><a style="text-decoration: none" href="Lab8.html">Lab7</a></th>
-        <th class="Menu"><a style="text-decoration: none" href="Lab8.html">Lab8</a></th>
+        <th class="Menu"><a style="text-decoration: none" href="Lab9.html">Lab6</a></th>
+        <th class="Menu"><a style="text-decoration: none" href="Lab9.html">Lab7</a></th>
+        <th class="Menu"><a style="text-decoration: none" href="Lab9.html">Lab8</a></th>
         <th class="Menu"><a style="text-decoration: none" href="Lab9.html">Lab9</a></th>
     </tr>
 </table>
@@ -29,29 +29,22 @@
     <tr>
         <td>
             <dl class="Buttons">
-                <dt><a href="OpisPredm1.html">Постановка задачі Л/р №8</a></dt>
+                <dt><a href="OpisPredm1.html">Постановка задачі Л/р №9</a></dt>
             </dl>
             <dl class="Buttons">
-                <dt><a href="Opys.html">Опис об'єктів предметної галузі</a></dt>
+                <dt><a href="2punkt.html">Виконання 2 пункту</a></dt>
             </dl>
             <dl class="Buttons">
-                <dt><a href="Infologic.html">Інфологічна модель</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="Datalogic.html">Даталогічна модель</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="phpmyadmin.html">Реалізація БД в СУБД phpMyadmin.</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="Search.html">Вивід даних БД</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="auto.html">Авторизація. Сесія</a></dt>
-            </dl>
-            <dl class="Buttons">
-                <dt><a href="VysLab2.html">ВИСНОВОК</a></dt>
-            </dl>
+                <dt><a href="WebSite.html"></a></dt>
+                <dl class="Buttons">
+                    <dt><a href="Func.html">Список функціоналу програми</a></dt>
+                </dl>
+                <dl class="Buttons">
+                    <dt><a href="Compare.html">Порівняння функціоналу</a></dt>
+                </dl>
+                <dl class="Buttons">
+                    <dt><a href="VysLab2.html">ВИСНОВОК</a></dt>
+                </dl>
         </td>
 
         <td>
@@ -61,7 +54,7 @@
 
         <td>
             <div>
-                <img src="https://i.imgur.com/lkW8Cwq.png">
+                <img src="">
             </div>
         </td>
     </tr>
