--- a/Lab9/WebSite.html
+++ b/Lab9/WebSite.html
@@ -54,7 +54,7 @@
 
         <td>
             <div>
-                <img src="">
+                <img src="https://i.imgur.com/4lBw1ld.png">
             </div>
         </td>
     </tr>
